--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
