chat functionality working porperly

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "data-fns": "^1.1.0",
     "lucide-react": "^0.308.0",
+    "nanoid": "^5.0.7",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
