--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "data-fns": "^1.1.0",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.308.0",
     "nanoid": "^5.0.7",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
