--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
